# DToR_deep_research

./: .dockerignore  .gitignore  Dockerfile  README.md  auto_continue.py  dependency_list.md  docker-compose.yml  langgraph.json  pyproject.toml  requirements_fet_rag.txt  submit_job.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: containers.yml  docs.yml
FET_handbook/: 00_Primer_Units_Acronyms_Naming.md
cluster_checkpoints/2d-synaptic-transistors-practical/: perspectives.json
cluster_checkpoints/batteryless-stretchable-biosensors/: perspectives.json
cluster_checkpoints/co2-sensing-2d-materials/: perspectives.json
cluster_checkpoints/nextgen-solar-unconventional/: perspectives.json
cluster_checkpoints/nutrient-sensors-anti-interference/: perspectives.json
cluster_checkpoints/oer-wastewater-resistant-cats/: perspectives.json
cluster_checkpoints/printed-fet-array-process-window/: perspectives.json
cluster_checkpoints/s-aureus-fet-commercial-probes/: perspectives.json
cluster_checkpoints/transient-biodegradable-sensor-nodes/: perspectives.json
docs/: CHAINLIT_WORKFLOWS.md  MODALITY_RAG.md  RESEARCH_WORKFLOWS.md  SYSTEM_OVERVIEW.md  dependency_list.md  index.md  myst.yml
docs/FET_handbook/: 00-02_Primer_Architectures_Materials.md  03A-04_Fabrication_and_Process_Windows.md  05-07_Testing_SurfaceChem_QA.md  08-09_Handheld_and_Core_Appendices.md  A_Rapti_Data_SOP_Map.md
docs/_static/: custom.css
dtor_orchestration/: dtor_smart_manager.sh  dtor_stage1_diversify.sh  dtor_stage3_finalize.sh
dtor_orchestration_cs_cluster/: dtor_stage2_branch.sh
dtor_orchestration_dsi_cluster/: dtor_final_synthesis.py  run_batch_cluster.py  tot_final_synthesis.py  tot_smart_manager.sh  tot_stage2_branch.sh  tot_stage3_finalize.sh
examples/: .env.example  .env.fet_rag  .env_example_DToR_gpt-oss120B_local500
examples/research_topics/: topic_log.tex  (+14 more)
research_topics/: 2D_Synaptic_Transistors_Practical.txt  Ambient_Pressure_Diamond_Growth.txt  CO2RR_SOTA_and_Emerging_Cats.txt  CO2_Sensing_2D_Materials.txt  Electro_Photo_Gated_Smart_Membranes.txt  LIB_Advanced_Binders.txt  LiCoNi_Selective_Membranes.txt  Li_over_Na_Selectivity_Membranes.txt  ML_e_Tongue_for_Water.txt  OER_Wastewater_Resistant_Cats.txt  PFAS_2D_FET_Probes.txt  PFAS_Electro_Degradation.txt  Wastewater_Resource_Recovery_Cats.txt
single_cs_cluster/: submit_all_single_parallel.sh
(+561 files in other folders)
