[project]
name = "ollama-deep-researcher"
version = "0.0.1"
description = "Fully local web research and summarization assistant with Ollama and LangGraph."
authors = [
    { name = "Lance Martin" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "langgraph==0.3.21",
    "langgraph-checkpoint-sqlite",
    "langchain-community==0.3.20",
    "langchain-core==0.3.76",
    "langchain-chroma==0.2.6",
    "langchain-huggingface==0.3.1",
    "langchain-ollama==0.3.8",
    "langchain-openai==0.3.11",
    "tavily-python>=0.5.0",
    "ddgs>=9.5.5",
    "openai>=1.12.0",
    "httpx>=0.28.1",
    "markdownify>=0.11.0",
    "python-dotenv==1.0.1",
    "sentence-transformers==4.0.0",
    "chromadb==1.0.21",
    "peft==0.15.1",
]

[project.optional-dependencies]
dev = ["mypy==1.11.1", "ruff==0.6.1"]
ui = [
    "chainlit>=2.0.0",
    "arize-phoenix",
    "openinference-instrumentation-langchain",
]
fet_rag = [
    # Core vector store (already in main deps, but listed for completeness)
    "chromadb>=0.4.0",
    "langchain-chroma>=0.1.0",
    # Embeddings (sentence-transformers already in main deps)
    "langchain-huggingface>=0.0.1",
    "sentence-transformers>=2.0.0",
    "transformers>=4.30.0",
    # Core langchain (already in main deps, but listed for completeness)
    "langchain>=0.1.0",
    "langchain-community>=0.0.1",
    "langchain-core>=0.1.0",
    # Utilities
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    # Optional but recommended
    "tqdm>=4.60.0",
]
docs = [
    "jupyter-book==1.0.2",
    "sphinx>=7.0.0",
    "myst-parser>=2.0.0",
    "sphinx-book-theme>=1.0.0",
    "sphinx-design>=0.5.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ollama_deep_researcher"]

[tool.setuptools.package-dir]
"ollama_deep_researcher" = "src/ollama_deep_researcher"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
